appdir = $(pythondir)/birdieapp/gui/

app_PYTHON = \
    aboutdialog.py \
    activitybox.py \
    __init__.py \
    dialogs.py \
    mainwindow.py \
    mediaviewer.py \
    notificationmanager.py \
    statusicon.py \
    tweetbox.py \
    tweetdialog.py \
    tweetlist.py \
    userbox.py \
    welcome.py
